Cmpletato html css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,78 @@
         <main>
             <!-- inizio sezione opzioni  -->
             <section class="option-section">
+                <div>
+                    <label for="burger-name"></label>
+                    <input id="burger-name" type="text" placeholder="Name Your Burger">
+                </div>
 
+                <h4>Ingredients</h4>
+
+                <div class="option-container">
+                    <ul class="list-col-left">
+                        <li class="option-item">
+                            <img src="img/cheese.svg" alt="cheese">
+                            <div class="checkbox-input">
+                                <label for="cheese-check">Cheese</label>
+                                <input type="checkbox" id="cheese-check">
+                            </div>
+                        </li>
+
+                        <li class="option-item">
+                            <img src="img/fried-egg.svg" alt="egg">
+                            <div class="checkbox-input">
+                                <label for="egg-check">Cheese</label>
+                                <input type="checkbox" id="egg-check">
+                            </div>
+                        </li>
+
+                        <li class="option-item">
+                            <img src="img/mustard.svg" alt="mustard">
+                            <div class="checkbox-input">
+                                <label for="mustard-check">Mustard</label>
+                                <input type="checkbox" id="mustard-check">
+                            </div>
+                        </li>
+                    </ul>
+
+                    <ul class="list-col-right">
+                        <li class="option-item">
+                            <img src="img/tomato.svg" alt="tomato">
+                            <div class="checkbox-input">
+                                <label for="tomato-check">Tomato</label>
+                                <input type="checkbox" id="tomato-check">
+                            </div>
+                        </li>
+
+                        <li class="option-item">
+                            <img src="img/lettuce.svg" alt="lettuce">
+                            <div class="checkbox-input">
+                                <label for="lettuce-check">Lettuce</label>
+                                <input type="checkbox" id="lettuce-check">
+                            </div>
+                        </li>
+
+                        <li class="option-item">
+                            <img src="img/ketchup.svg" alt="ketchup">
+                            <div class="checkbox-input">
+                                <label for="ketchup-check">Ketchup</label>
+                                <input type="checkbox" id="ketchup-check">
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="discount-container">
+
+                    <label for="discount-input">Discount Coupon</label>
+                    <input id="discount-input" type="text">
+
+                </div>
+                
+                <div class="btn-container">
+                    <button id="calc-btn">calculate</button>
+                </div>
+                
             </section>
             <!-- fine opzioni  -->
 
