completato - con riserva

--- a/index.html
+++ b/index.html
@@ -34,25 +34,25 @@
                     <ul class="list-col-left">
                         <li class="option-item">
                             <img src="img/cheese.svg" alt="cheese">
-                            <div class="checkbox-input">
+                            <div>
                                 <label for="cheese-check">Cheese</label>
-                                <input type="checkbox" id="cheese-check">
+                                <input type="checkbox" id="cheese-check" class="checkbox-input" value="6">
                             </div>
                         </li>
 
                         <li class="option-item">
                             <img src="img/fried-egg.svg" alt="egg">
-                            <div class="checkbox-input">
+                            <div>
                                 <label for="egg-check">Cheese</label>
-                                <input type="checkbox" id="egg-check">
+                                <input type="checkbox" id="egg-check" class="checkbox-input" value="8">
                             </div>
                         </li>
 
                         <li class="option-item">
                             <img src="img/mustard.svg" alt="mustard">
-                            <div class="checkbox-input">
+                            <div>
                                 <label for="mustard-check">Mustard</label>
-                                <input type="checkbox" id="mustard-check">
+                                <input type="checkbox" id="mustard-check" class="checkbox-input" value="2">
                             </div>
                         </li>
                     </ul>
@@ -60,25 +60,25 @@
                     <ul class="list-col-right">
                         <li class="option-item">
                             <img src="img/tomato.svg" alt="tomato">
-                            <div class="checkbox-input">
+                            <div>
                                 <label for="tomato-check">Tomato</label>
-                                <input type="checkbox" id="tomato-check">
+                                <input type="checkbox" id="tomato-check" class="checkbox-input" value="4">
                             </div>
                         </li>
 
                         <li class="option-item">
                             <img src="img/lettuce.svg" alt="lettuce">
-                            <div class="checkbox-input">
+                            <div>
                                 <label for="lettuce-check">Lettuce</label>
-                                <input type="checkbox" id="lettuce-check">
+                                <input type="checkbox" id="lettuce-check" class="checkbox-input" value="4">
                             </div>
                         </li>
 
                         <li class="option-item">
                             <img src="img/ketchup.svg" alt="ketchup">
-                            <div class="checkbox-input">
+                            <div>
                                 <label for="ketchup-check">Ketchup</label>
-                                <input type="checkbox" id="ketchup-check">
+                                <input type="checkbox" id="ketchup-check" class="checkbox-input" value="2">
                             </div>
                         </li>
                     </ul>
@@ -90,7 +90,7 @@
                     <input id="discount-input" type="text">
 
                 </div>
-                
+
                 <div class="btn-container">
                     <button id="calc-btn">calculate</button>
                 </div>
