aggiunta validazione nome

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="discount-container">
 
                     <label for="discount-input">Discount Coupon</label>
-                    <input id="discount-input" type="text">
+                    <input id="discount-input" type="text" placeholder="12345ABCDE">
 
                 </div>
 
