--- a/index.html
+++ b/index.html
@@ -100,10 +100,11 @@
 
             <!-- sezione prezzo finale -->
             <section class="price-section">
+                <div class="price-container">
+                    <h4>Your Price</h4>
 
-                <h4>Your Price</h4>
-
-                <span id="final-price"></span>
+                    <span id="final-price"></span>
+                </div>
             </section>
             <!-- fine prezzo  -->
         </main>
